--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
