--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@splinetool/react-spline": "^2.2.6",
     "@types/js-cookie": "^3.0.6",
+    "@vercel/analytics": "^1.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
