--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^12.4.2",
     "lenis": "^1.1.11",
     "lucide-react": "^0.376.0",
     "mini-svg-data-uri": "^1.4.4",
