--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-helmet-async": "^2.0.5",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.1",
     "sonner": "^1.4.3",
