fix: Add Content-Language header to Vercel rewrites for improved localization

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,13 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/index.html",
+      "headers": [
+        {
+          "key": "Content-Language",
+          "value": "en"
+        }
+      ]
     }
   ]
 }
