fix: Correct regex pattern in vercel.json for asset matching

--- a/vercel.json
+++ b/vercel.json
@@ -35,7 +35,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2))",
+      "source": "/(.*.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2))",
       "headers": [
         {
           "key": "Cache-Control",
