--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,3 +18,12 @@ updates:
     labels:
       - "dependencies"
       - "npm"
+    allow:
+      - dependency-type: "direct"
+    ignore:
+      - dependency-type: "all"
+        update-types:
+          - "version-update:semver-patch"
+          - "version-update:semver-minor"
+    post-update-commands:
+      - "npm install"
