--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,12 +18,8 @@ updates:
     labels:
       - "dependencies"
       - "npm"
-    allow:
-      - dependency-type: "direct"
     ignore:
-      - dependency-type: "all"
+      - dependency-name: "*"
         update-types:
           - "version-update:semver-patch"
           - "version-update:semver-minor"
-    post-update-commands:
-      - "npm install"
