--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,5 +21,7 @@ updates:
     ignore:
       - dependency-name: "*"
         update-types:
-          - "version-update:semver-patch"
           - "version-update:semver-minor"
+          - "version-update:semver-patch"
+    allow:
+      - dependency-type: "direct"
