--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-day-picker": "^9.8.0",
+    "react-contribution-calendar": "^2.0.4",
+    "react-contribution-viewer": "^1.1.3",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-github-calendar": "^4.5.9",
