--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@eslint/css": "^0.8.0",
     "@eslint/json": "^0.11.0",
     "@eslint/markdown": "^7.0.0",
+    "@prerenderer/renderer-puppeteer": "^1.2.4",
+    "@prerenderer/rollup-plugin": "^0.3.12",
     "@types/aos": "^3.0.7",
     "@types/node": "^25.0.2",
     "@types/react": "^18.2.56",
