--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "virajbhartiya",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc && vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
-    "preview": "vite preview"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -19,14 +18,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@splinetool/react-spline": "^4.0.0",
-    "@types/js-cookie": "^3.0.6",
     "@vercel/analytics": "^1.3.1",
-    "@vitejs/plugin-react": "^5.0.0",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^12.4.2",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.376.0",
     "mini-svg-data-uri": "^1.4.4",
+    "next": "^14.2.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-contribution-calendar": "^2.0.4",
@@ -35,37 +34,23 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-github-calendar": "^4.5.9",
-    "react-helmet-async": "^2.0.5",
     "react-responsive": "^10.0.0",
-    "react-router-dom": "^7.6.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-scramble": "^2.2.15"
   },
   "devDependencies": {
-    "@eslint/css": "^0.8.0",
-    "@eslint/json": "^0.11.0",
-    "@eslint/markdown": "^7.0.0",
-    "@prerenderer/renderer-puppeteer": "^1.2.4",
-    "@prerenderer/rollup-plugin": "^0.3.12",
     "@types/aos": "^3.0.7",
     "@types/node": "^25.0.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react-swc": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-config-next": "^14.2.0",
     "postcss": "^8.5.6",
-    "postcss-apply": "^0.12.0",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.8"
+    "typescript": "^5.2.2"
   }
 }
