--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main, develop]
 
 jobs:
-  lint-and-format:
+  check:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,9 +23,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npm run lint
-
       - name: Check Prettier formatting
         run: npx prettier --check .
 
@@ -34,7 +31,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: lint-and-format
+    needs: check
 
     steps:
       - name: Checkout code
